crates/compiler/semantic/tests/snapshots/diagnostics__statements::let_statements::test_let_statement_duplicate.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: statements::let_statements::test_let_statement_duplicate"
---
Fixture: semantic_tests::statements::let_statements::test_let_statement_duplicate
============================================================
Source code:
func test() { 
        let x = 1;
        let x = 2; // Duplicate definition
     }
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1003] Error: Duplicate definition of 'x'
   ╭─[ semantic_tests::statements::let_statements::test_let_statement_duplicate:3:13 ]
   │
 3 │         let x = 2; // Duplicate definition
   │             ┬  
   │             ╰── Duplicate definition of 'x'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::statements::let_statements::test_let_statement_duplicate:1:6 ]
   │
 1 │ func test() {
   │      ──┬─  
   │        ╰─── Function 'test' doesn't return on all paths
───╯
