crates/compiler/semantic/tests/snapshots/diagnostics__statements::let_statements::test_let_with_undeclared_variable.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: statements::let_statements::test_let_with_undeclared_variable"
---
Fixture: semantic_tests::statements::let_statements::test_let_with_undeclared_variable
============================================================
Source code:
func test() { let x = undefined_var; }
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ semantic_tests::statements::let_statements::test_let_with_undeclared_variable:1:23 ]
   │
 1 │ func test() { let x = undefined_var; }
   │                       ──────┬──────  
   │                             ╰──────── Undeclared variable 'undefined_var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::statements::let_statements::test_let_with_undeclared_variable:1:6 ]
   │
 1 │ func test() { let x = undefined_var; }
   │      ──┬─  
   │        ╰─── Function 'test' doesn't return on all paths
───╯
